[gd_scene load_steps=9 format=2]

[ext_resource path="res://menus/menu.gd" type="Script" id=1]
[ext_resource path="res://team-assets/backgrounds/nightsky.png" type="Texture" id=2]
[ext_resource path="res://team-assets/title.png" type="Texture" id=3]
[ext_resource path="res://menus/TitleLogo.gd" type="Script" id=4]
[ext_resource path="res://team-assets/ufo/ufo1-nooccar.png" type="Texture" id=5]
[ext_resource path="res://menus/menu-ufo.gd" type="Script" id=6]
[ext_resource path="res://hud/font_kenvector_future_thin.tres" type="DynamicFont" id=7]
[ext_resource path="res://team-assets/ufo/ufo2-nooccar.png" type="Texture" id=8]

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="nightsky" type="Sprite" parent="." index="0"]

modulate = Color( 0.394531, 0.394531, 0.394531, 1 )
position = Vector2( 341.829, 470.964 )
scale = Vector2( 1.26824, 1.26824 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 515.082, 211.014 )
scale = Vector2( 1.4401, 1.4401 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="ufo1-nooccar" type="Sprite" parent="." index="2"]

position = Vector2( 724.48, 607.684 )
scale = Vector2( 0.362401, 0.362401 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Container" type="Container" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 37.0
margin_top = 455.0
margin_right = 405.0
margin_bottom = 735.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Play" type="Button" parent="Container/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 368.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="Demo" type="Button" parent="Container/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 368.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Demo Showcase"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="Credits" type="Button" parent="Container/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 368.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="Credits" type="WindowDialog" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 37.0
margin_top = 92.0
margin_right = 938.0
margin_bottom = 726.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = ""
resizable = false
_sections_unfolded = [ "Popup" ]

[node name="Label" type="Label" parent="Credits" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 23.0
margin_right = -448.0
margin_bottom = -325.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Shipwrecked Space Scoundrel

Game for the GitHub game jam \"Game Off 2018\", theme Hybrid. Hero of the game is a biomechanic (part living, part machine) space raccoon. You may find other smaller incorporations of the theme.

Code and project lead: northburns
Art: iirouse
Sounds: efunkelist

Some resources licensed from Kenney, Game-Icons.net, and 	Pexels. More thorough credits, license information, and social media links over at our GitHub repo: 

https://github.com/northburns/redesigned-pancake
"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="LinkButton" type="LinkButton" parent="Credits" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 692.0
margin_top = 507.0
margin_right = 880.0
margin_bottom = 521.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Open GitHub repo in browser"

[node name="StartPlay" type="WindowDialog" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_top = 51.0
margin_right = 969.0
margin_bottom = 750.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = ""
resizable = false
_sections_unfolded = [ "Popup" ]

[node name="Sprite" type="Sprite" parent="StartPlay" index="1"]

position = Vector2( 467.368, 255.6 )
scale = Vector2( 0.53101, 0.53101 )
texture = ExtResource( 8 )

[node name="StartThePlayNow" type="Button" parent="StartPlay" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 329.0
margin_top = 497.0
margin_right = 703.0
margin_bottom = 615.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Rescue Nooccar from an interstellar shipwreck"
flat = false
align = 1

[connection signal="pressed" from="Container/VBoxContainer/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="Container/VBoxContainer/Demo" to="." method="_on_Demo_pressed"]

[connection signal="pressed" from="Container/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="Credits/LinkButton" to="." method="_on_LinkButton_pressed"]

[connection signal="pressed" from="StartPlay/StartThePlayNow" to="." method="_on_StartThePlayNow_pressed"]


